<!-- Copyright (c) 2011 PetalsLink.
All rights reserved.
This program and the accompanying materials are made available under the
terms of the Eclipse Public License v1.0 which accompanies this distribution,
and is available at http://www.eclipse.org/legal/epl-v10.html

Authors:
* Mickael Istria (PetalsLink)
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.eclipse.swtbot.plugins</groupId>
  <artifactId>org.eclipse.swtbot.generator</artifactId>
  <packaging>eclipse-plugin</packaging>
  <version>2.1.1-SNAPSHOT</version>
   
  <properties>
  	<java.version>1.5</java.version>
  	<maven.version>3.0</maven.version>
  	<tycho.version>0.18.0</tycho.version>
  	<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
  </properties>
  
  <repositories>
    <repository>
      <id>kepler</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/releases/kepler</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>sonatype-public</id>
      <url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
    </pluginRepository>
  </pluginRepositories>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
		<artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <resolver>p2</resolver>
          <pomDependencies>consider</pomDependencies>
          <ignoreTychoRepositories>true</ignoreTychoRepositories>
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-packaging-plugin</artifactId>
          <version>${tycho.version}</version>
          <configuration>
            <format>yyyyMMdd-HHmm</format>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho.version}</version>
          <configuration>
            <useUIHarness>true</useUIHarness>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <argLine>${tycho.test.jvmArgs}</argLine>
            <!-- kill test JVM if tests take more than 1 minute (60 seconds) to finish -->
            <forkedProcessTimeoutInSeconds>60</forkedProcessTimeoutInSeconds>
          </configuration>
        </plugin>
        <plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-assembly-plugin</artifactId>
        	<version>2.3</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>  
  
   
</project>